[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/New Piskel.png" type="Texture" id=1]
[ext_resource path="res://player/scripts/shot_gun.gd" type="Script" id=2]
[ext_resource path="res://sons/recarregar_shot_gun.ogg" type="AudioStream" id=3]
[ext_resource path="res://sons/tiro.ogg" type="AudioStream" id=4]
[ext_resource path="res://sprites/light.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 32, 64, 16, 16 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="shot_gun" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -1.75255 )
frames = SubResource( 2 )
offset = Vector2( 5, 0 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 14, -5.75255 )
rotation = -0.261799

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( 14, -3.75255 )

[node name="Position2D3" type="Position2D" parent="."]
position = Vector2( 14, -1.75255 )
rotation = 0.261799

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 2.5
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 24.0

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 14, -6 )
rotation = -0.261799
texture = ExtResource( 5 )
texture_scale = 0.2
energy = 0.0
shadow_enabled = true
shadow_item_cull_mask = 3

[node name="Light2D2" type="Light2D" parent="."]
position = Vector2( 14, -4 )
texture = ExtResource( 5 )
texture_scale = 0.3
energy = 0.0
shadow_enabled = true
shadow_item_cull_mask = 3

[node name="Light2D3" type="Light2D" parent="."]
position = Vector2( 14, -2 )
rotation = 0.261799
texture = ExtResource( 5 )
texture_scale = 0.2
energy = 0.0
shadow_enabled = true
shadow_item_cull_mask = 3

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
